--- a/DemoProject/ChatMessageDemoProject/Base.lproj/Main.storyboard
+++ b/DemoProject/ChatMessageDemoProject/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aw8-qo-NSf">
                                                     <rect key="frame" x="69" y="37" width="243" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -117,7 +117,7 @@
         <!--FTChatMessageDemo-->
         <scene sceneID="i1J-a0-n9S">
             <objects>
-                <viewController storyboardIdentifier="FTChatMessageTableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yp7-sx-RoE" customClass="FTChatMessageTableViewController" customModule="ChatMessageDemoProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DemoTableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yp7-sx-RoE" customClass="DemoTableViewController" customModule="ChatMessageDemoProject" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="siJ-ZY-eNQ"/>
                         <viewControllerLayoutGuide type="bottom" id="gOF-4m-RKf"/>
