--- a/FTChatMessage/FTChatMessageInput/FTChatMessageRecorderView.xib
+++ b/FTChatMessage/FTChatMessageInput/FTChatMessageRecorderView.xib
@@ -12,7 +12,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1LU-xr-sQf">
-                    <rect key="frame" x="151" y="36" width="100" height="100"/>
+                    <rect key="frame" x="151" y="46" width="100" height="100"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="93z-Vi-0sS"/>
@@ -32,7 +32,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hold on to record..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFG-bC-cO4">
-                    <rect key="frame" x="142" y="10" width="118" height="16"/>
+                    <rect key="frame" x="142" y="20" width="118" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -40,7 +40,7 @@
             </subviews>
             <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="1LU-xr-sQf" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="9dd-gO-IHB"/>
+                <constraint firstItem="1LU-xr-sQf" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="10" id="9dd-gO-IHB"/>
                 <constraint firstItem="1LU-xr-sQf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EpW-0V-pV9"/>
                 <constraint firstItem="NFG-bC-cO4" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="bkq-YK-zzZ"/>
                 <constraint firstItem="1LU-xr-sQf" firstAttribute="top" secondItem="NFG-bC-cO4" secondAttribute="bottom" constant="10" id="d2q-We-Yk0"/>
