--- a/Demo/Demo/Base.lproj/Main.storyboard
+++ b/Demo/Demo/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Segues with Peek and Pop" minToolsVersion="7.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -221,10 +220,6 @@
                                             <outlet property="contentLabel" destination="aw8-qo-NSf" id="f6X-vD-zDI"/>
                                             <outlet property="iconImageView" destination="DKl-Q2-9U7" id="ing-kQ-vWG"/>
                                             <outlet property="nameLabel" destination="aTs-uJ-ubA" id="Vay-zQ-bYi"/>
-                                            <segue destination="yp7-sx-RoE" kind="show" id="g5r-Dm-Eeg">
-                                                <segue key="commit" inheritsFrom="parent" id="tqF-Us-cHP"/>
-                                                <segue key="preview" inheritsFrom="commit" id="BX1-K8-ppl"/>
-                                            </segue>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -252,6 +247,7 @@
                     <connections>
                         <outlet property="chatListTableView" destination="mU5-Db-lRS" id="pfZ-OJ-zEX"/>
                         <segue destination="OXO-XH-KlB" kind="show" identifier="ChooseContactsToChat" id="se8-Ax-gfb"/>
+                        <segue destination="yp7-sx-RoE" kind="show" identifier="HomeToChat" id="JGc-dV-EgH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xNg-od-XWv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -273,7 +269,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="70" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="cSX-UX-c1K">
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search" id="3YQ-Za-qLg">
-                                    <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                    <rect key="frame" x="0.0" y="64" width="0.0" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </searchBar>
@@ -354,7 +350,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="FTChatMessage" id="2o4-k4-F6O"/>
+                    <navigationItem key="navigationItem" title="FTChatMessage" id="yXG-Sp-pDM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OJx-pi-pYY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -385,7 +381,4 @@
     <resources>
         <image name="Contacts" width="128" height="128"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="g5r-Dm-Eeg"/>
-    </inferredMetricsTieBreakers>
 </document>
